# warlock

./: .env  .gitignore  Cargo.toml  README.md  test.html
.github/workflows/: rust.yml
config/: config.dev.toml  config.toml
crud_macro/: Cargo.toml
crud_macro/src/: lib.rs
funread/: .env  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
funread/src/: main.ts
funread/src/assets/: heti.css  index.css
funread/src/components/home/: Header.vue
funread/src/router/: index.ts
funread/src/utils/: device.ts  random.ts  request.ts
funread/src/views/: AboutView.vue  HomeView.vue
funread/src/views/desktop/Home/: Home.vue
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250417_133850_uploads.rs  m20250419_054616_banner.rs
src/: error.rs  lib.rs  main.rs  resp.rs  router.rs
src/app/: mod.rs
src/app/dao/: banner.rs  book.rs
src/app/handler/: admin.rs  banner.rs  base.rs  book.rs  mod.rs  user.rs
src/app/service/: banner.rs  book.rs  mod.rs  uploads.rs  user.rs
src/boot/: cache.rs  conf.rs  db.rs  log.rs  mod.rs  request.rs
src/models/dto/: banner.rs  book.rs  mod.rs  upload.rs  user.rs
src/models/entity/: banner.rs  book.rs  mod.rs  prelude.rs  tag.rs  uploads.rs  users.rs
src/pkg/: mod.rs
src/pkg/ali/: oss.rs
src/pkg/crypto/: mod.rs
src/pkg/utils/: datetime.rs  mod.rs
templates/: iframe_test.html  index.html
templates/admin/: upload.html
templates/layout/: common.html
warlock_chrome/: Cargo.toml
warlock_chrome/src/: lib.rs
