[package]
name = "warlock"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".", "crud_macro","migration"
]

[dependencies]
axum = {version = "0.8.3",features = ["multipart", "ws","query"]}
bcrypt = "0.17.0"
clap = {version="4.5.35",features = ["derive"]}
config = "0.15.11"
crud_macro = {path = "crud_macro"}
lazy_static = "1.5.0"
redis = { version = "0.29.2", features = ["tokio-comp"] }
reqwest = {version = "0.12.15", features = ["json", "stream", "cookies", "blocking"]}
sea-orm = {version = "1.1.8",features = ["runtime-tokio-native-tls", "sqlx-mysql","macros","debug-print"]}
serde = {version = "1.0.219", features = ["derive"]}
thiserror = {version = "2.0.12"}
time ={version =  "0.3.41",features = ["formatting", "parsing", "macros", "std", "local-offset","serde"]}
tokio = {version = "1.44.2", features = ["full"]}
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time","fmt"] }
uuid = {version = "1.16.0",features = ["v4"]}
validator = {version="0.20.0",features = ["derive"]}

