[package]
name = "warlock"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "migration", 
    # "warlock_chrome",
    ]

[dependencies]
anyhow = "1.0.98"
askama = {version = "0.14.0",features = ["full"]}
axum = {version = "0.8.4",features = ["multipart", "ws","query"]}
base64 = "0.22.1"
bcrypt = "0.17.0"
clap = {version="4.5.38",features = ["derive"]}
config = "0.15.11"
crud_macro = {path = "crud_macro"}
hmac = "0.12.1"
lazy_static = "1.5.0"
redis = { version = "0.31.0", features = ["tokio-comp"] }
reqwest = {version = "0.12.15", features = ["json", "stream", "cookies", "blocking"]}
sea-orm = {version = "1.1.11",features = ["runtime-tokio-native-tls", "sqlx-mysql","macros","debug-print"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sha1 = "0.10.6"
thiserror = {version = "2.0.12"}
time ={version =  "0.3.41",features = ["formatting", "parsing", "macros", "std", "local-offset","serde"]}
tokio = {version = "1.45.0", features = ["full"]}
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs","cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time","fmt"] }
uuid = {version = "1.16.0",features = ["v4"]}
validator = {version="0.20.0",features = ["derive"]}
warlock_chrome = {path = "warlock_chrome"}

[profile.release]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gcc"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-unknown-musl-gcc"